@@ -30,6 +30,10 @@
 | Fix plugin execution for Windows.
 | https://github.com/knative/client/pull/738[#738]
 
+| 🐛
+| Fix default config path on Windows
+| https://github.com/knative/client/pull/751[#751]
+
 ## v0.13.0 (2020-03-11)
 
 [cols="1,10,3", options="header", width="100%"]
